@@ -81,7 +81,8 @@ Version 1.0.4 April 5, 2009
 - New #212: 'Readline' support in yiic console script (olafure)
 - New #225: Added trace statements to CActiveRecord and CActiveFinder (Qiang)
 - New #230: Enhanced CHtml so that it can be used in situations where controller is absent (Qiang)
-- New #233: allow CFileValidator::types to be set with an array (Qiang)
+- New #233: Allow CFileValidator::types to be set with an array (Qiang)
+- New #292: Refactored CActiveRecord so that attribute assignment can be overridden more easily (Qiang)
 - New: Added support to GROUP BY and HAVING in eager loading of AR (Qiang)
 - New: Added CClientScript::scriptFiles and CClientScript::cssFiles (Qiang)
 - New: Added SQL Server support for Active Record (Christophe)
